# android_onnxruntime

./: CMakeLists.txt  README.md  basic.cc  builds.sh
